# video-workout-mapping-program

./: .gitignore  README.md  output.md  writeup.md
android-app/app/: build.gradle.kts
android-app/app/src/androidTest/java/com/example/myapplication/: CppE2ETest.kt
android-app/app/src/main/cpp/: CMakeLists.txt  cpp_core_wrapper.cpp
android-app/app/src/main/java/com/example/myapplication/: MainActivity.kt  PhysicsAPI.kt
android-app/gradle/wrapper/: gradle-wrapper.properties
cpp-core/: CMakeLists.txt
cpp-core/include/: FrameBuffer.h  controller.h
cpp-core/src/: FrameBuffer.cpp  test.cpp
cpp-core/tests/: FrameBufferTests.cpp
